deployment/consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-consumer
spec:
  selector:
    matchLabels:
      app: server-consumer
  replicas: 1
  template:
    metadata:
      labels:
        app: server-consumer
    spec:
      containers:
        - name: server-consumer
          image: ghcr.io/miem-refugees/telellm:main
          command: ["uv"]
          args: ["run", "telellm/consumer.py"]
